--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   font-family: 'Poppins', Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  font-size: 100%;
 
   color-scheme: light dark;
   color: var(--main-color);
